# palapply

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: colors.rs  dim.rs  get.rs  main.rs  noise.rs
